--- a/src/sass/module/_hero.scss
+++ b/src/sass/module/_hero.scss
@@ -29,6 +29,7 @@
   font-weight:$regular;
   font-family:$third-font-family;
   color:$white;
+  white-space: nowrap;
 
   @include mq("md") {
   font-size:rem(80);
