--- a/src/sass/page/page-others/_page-others-main.scss
+++ b/src/sass/page/page-others/_page-others-main.scss
@@ -1,15 +1,15 @@
 @use "global" as *;
 
-.page-privacy-main {
+.page-others-main {
 }
 
-.page-privacy-main__inner.inner {
+.page-others-main__inner.inner {
   @include mq("md") {
     max-width: rem(850);
   }
 }
 
-.page-privacy-main__title {
+.page-others-main__title {
   font-size: rem(24);
   font-weight: $medium;
   font-family: "Noto Sans JP", sans-serif;
@@ -20,7 +20,7 @@
   }
 }
 
-.page-privacy-main__items {
+.page-others-main__items {
   margin-top: rem(40);
   counter-reset: section;
   font-weight: $regular;
@@ -33,38 +33,20 @@
   }
 }
 
-// .page-privacy-main__item {
-//   font-size: rem(16);
-//   font-weight: $regular;
-//   font-family: "Noto Sans JP", sans-serif;
-//   line-height: 2;
-//   color: $black;
-// }
-
-.page-privacy-main__item:not(:first-child) {
-  margin-top: rem(32);
-}
-
-.page-privacy-main__list-wrapper {
-  list-style: auto;
-  font-family: "Noto Sans JP", sans-serif;
-  padding-left: 1.5em;
-}
-
 
 // WP化
 .wp-block-spacer{
   height: rem(32);
 }
 
-.page-privacy-main__items li{
+.page-others-main__items li{
   counter-increment: section;
   position: relative;
   padding-left: 1.5em;
 }
 
 
-.page-privacy-main__items li::before{
+.page-others-main__items li::before{
   content: counter(section)".";
   position: absolute;
   top:0;
