--- a/src/sass/module/page-contact/_form.scss
+++ b/src/sass/module/page-contact/_form.scss
@@ -80,3 +80,228 @@
     margin-top: rem(40);
   }
 }
+
+
+
+// WP化
+.wpcf7-form-control{
+  width: 100%;
+  padding: rem(6.5) rem(8) rem(6.5) rem(16);
+  font-size: rem(16);
+  font-weight: $regular;
+  font-family: "Noto Sans JP", sans-serif;
+  color: $black;
+}
+
+.wpcf7-text::placeholder{
+  color: $skyblue;
+}
+
+.wpcf7-checkbox{
+  display: grid;
+  row-gap: rem(4);
+}
+
+
+
+.wpcf7-acceptance .wpcf7-list-item-label {
+  position: relative;
+  padding-left: rem(30);
+  font-size: rem(14);
+  line-height: 1.571;
+  font-family: "Noto Sans JP", sans-serif;
+  color: $black;
+
+  @include mq("md") {
+    padding-left: rem(38);
+  }
+}
+
+.wpcf7-acceptance .wpcf7-list-item-label::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  border: 0.0625rem solid #408f95;
+  width: rem(22);
+  height: rem(22);
+}
+
+.wpcf7-acceptance .wpcf7-list-item-label::after {
+  content: "";
+  position: absolute;
+  top: rem(5);
+  left: rem(4);
+  display: inline-block;
+  width: rem(14);
+  height: rem(8);
+  opacity: 0;
+  border-left: rem(2) solid $orange;
+  border-bottom: rem(2) solid $orange;
+  transform: rotate(-45deg);
+}
+
+
+.form__private input[type="checkbox"]:checked + span::after {
+  opacity: 1;
+}
+
+
+
+// WP化  ボタン
+
+
+
+
+// .form__button .button {
+// 	display: inline-block;
+// 	width: rem(202);
+// 	background-color: #408F95;
+// 	border: 0.0625rem solid #408F95;
+//   transition: 0.3s ease;
+// 	cursor: pointer;
+// 	z-index: 3;
+//   position: relative;
+// }
+
+// .form__button .button::before {
+// 	content: "";
+// 	position: absolute;
+// 	display: inline-block;
+// 	top: 0.25rem;
+// 	left: 0.25rem;
+// 	width: rem(202);
+// 	height: rem(54);
+// 	border: 0.0625rem solid #408F95;
+// 	padding: 0 0.25rem 0.25rem 0;
+// 	z-index: -1;
+// }
+
+// .form__button .button::after {
+// 	content: "";
+// 	position: absolute;
+// 	top: 0;
+// 	left: 0;
+// 	width: 100%;
+// 	background: #fff;
+// 	transform: scale(0, 1);
+// 	transform-origin: left top;
+// 	transition: 0.2s cubic-bezier(0.45, 0, 0.55, 1);
+// 	z-index: -1;
+// }
+
+// .form__button .button:hover::after {
+// 	transform: scale(1, 1);
+// }
+
+.button.button-send{
+  position: relative;
+}
+
+
+.button.button-send::before,
+.button.button-send::after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: rem(35);
+  height: rem(1);
+  background-color: $white;
+  transition: 0.3s background-color;
+  z-index: 1;
+}
+
+.button.button-send::before {
+  width: 2.5rem;
+  transform: translateY(-50%);
+}
+
+.button.button-send::after {
+  width: rem(9.2);
+  transform: translateY(-50%) rotate(45deg);
+  transform-origin: right center;
+}
+
+// .form__button .button:hover::before,
+// .form__button .button:hover::after {
+//   background-color: $green;
+// }
+
+.wpcf7-submit{
+  display: inline-block;
+  width: 100%;
+  padding: rem(16) rem(56);
+  font-size: 0.875rem;
+  line-height: 1.571;
+  text-align: left;
+  font-family: "Noto Sans JP", sans-serif;
+  text-transform: capitalize;
+  transition: 0.3s ease;
+  background-color: $green;
+  color: $white;
+}
+
+.wpcf7-submit:hover {
+	background-color: #fff;
+	color: #408F95;
+}
+
+
+// .button-arrow{
+//   position: absolute;
+//   top:rem(22);
+//   right: rem(54);
+//   width: rem(40);
+//   height: rem(6);
+// }
+
+// .button-arrow::before,
+// .button-arrow::after{
+// 	content: "";
+// 	position: absolute;
+// 	top: 50%;
+//   right: rem(35);
+//   height: rem(1);
+// 	background-color: #fff;
+// 	transition: 0.3s background-color;
+// }
+
+// .form__button  .arrow-line{
+//   position: absolute;
+//   width: rem(40);
+// 	transform: translateY(-50%);
+// }
+
+// .form__button  .arrow-head{
+//   position: absolute;
+//   width: rem(9.2);
+// 	transform: translateY(-50%) rotate(45deg);
+// 	transform-origin: right center;
+// }
+
+
+// .button-arrow::before {
+// 	width: rem(40);
+// 	transform: translateY(-50%);
+// }
+
+// .button-arrow::after {
+//   width: rem(9.2);
+// 	transform: translateY(-50%) rotate(45deg);
+// 	transform-origin: right center;
+// }
+
+// .button-arrow:hover::before,
+// .button-arrow:hover::after {
+// 	background-color: #408F95;
+// }
+
+
+
+// スピナー消す
+.form__button .wpcf7-spinner{
+  display: none;
+}
+
+
+
