--- a/src/sass/module/page-contact/_form-wrapper.scss
+++ b/src/sass/module/page-contact/_form-wrapper.scss
@@ -50,6 +50,8 @@
 .form-wrapper__body {
   width: 100%;
   margin-top: rem(12);
+  padding: 0;
+
   @include mq("md") {
     width: 68.57%;
     margin-top: 0;
@@ -107,13 +109,13 @@
 
 .form-wrapper__body.form-wrapper__body-6th {
   height: rem(200);
-  overflow: scroll;
   /*スクロールバー非表示（Firefox）*/
   scrollbar-width: none;
 }
 
 .wpcf7-form-control.wpcf7-textarea{
   height: 100%;
+  overflow: scroll;
 }
 
 /*スクロールバー非表示（Chrome・Safari・Edge）*/
@@ -218,6 +220,7 @@
 .wpcf7-form-control.wpcf7-acceptance{
   display: block;
   width: 100%;
+  padding: 0;
 }
 
 .wpcf7-acceptance .wpcf7-list-item{
@@ -226,13 +229,18 @@
 }
 
 .wpcf7-checkbox .wpcf7-list-item{
-  display: block;
-}
-
-.wpcf7-checkbox .wpcf7-list-item {
+  display: block; 
   position: relative;
   padding-left: rem(22);
 }
+
+.wpcf7-form-control.wpcf7-checkbox{
+  padding: 0;
+}
+.wpcf7-list-item{
+margin: 0;
+}
+
 
 .wpcf7-checkbox .wpcf7-list-item::before {
   content: "";
@@ -262,15 +270,6 @@
   opacity: 1;
 }
 
-.wpcf7-form-control.wpcf7-select {
-  font-size: rem(16);
-  font-weight: $regular;
-  font-family: "Noto Sans JP", sans-serif;
-  color: $black;
-}
-
-
-
 .form-wrapper__body-5th p{
   width: 100%;
   height: 100%;
@@ -288,11 +287,12 @@
   display: block;
   padding: rem(11) rem(8);
   font-size: rem(12);
+  line-height: 1.16;
   font-weight: $regular;
   font-family: "Noto Sans JP", sans-serif;
   color: $black;
   @include mq("md") {
-    padding: 0 rem(20) 0 rem(8);
+      padding: rem(7) rem(20) rem(7) rem(8);
   }
 }
 
