テキストエリア修正

--- a/WordPressTheme/assets/css/style.css
+++ b/WordPressTheme/assets/css/style.css
@@ -2653,7 +2653,7 @@ body {
 
 .wpcf7-form-control.wpcf7-textarea {
 	height: 100%;
-	overflow: scroll;
+	resize: none;
 }
 
 /*スクロールバー非表示（Chrome・Safari・Edge）*/
